[tool.poetry]
name = "typegql"
version = "3.0.4"
description = "A Python GraphQL library that makes use of type hinting and concurrency support with the new async/await syntax."
authors = ["Ciprian Tarta <ciprian@cipriantarta.ro>"]
license = "MIT"

readme = 'README.rst'  # Markdown files are supported

repository = "https://github.com/cipriantarta/typegql"
homepage = "https://github.com/cipriantarta/typegql"

keywords = ['graphql', 'python', 'asyncio', 'generics', 'typing']

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {version = "^3.4", optional = true}
graphql-core = ">=3"

[tool.poetry.dev-dependencies]
pytest-flake8 = "^1.0"
pytest-mypy = "^0.4.2"
sanic = "^19.9.0"
pytest-asyncio = "^0.10.0"

[tool.poetry.extras]
client = ["aiohttp", "cchardet"]

[build-system]
requires = ["poetry>=1.0.0b7"]
build-backend = "poetry.masonry.api"
